--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "redis": "^2.8.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start" : "node app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC"
